--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_USER=postgres
 DB_PASSWORD=totona88
 DB_HOST=5432
-YOUR_API_KEY= 76c39c1c22ec44c5b7ae971d9a35d154
+YOUR_API_KEY=76c39c1c22ec44c5b7ae971d9a35d154
